=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


** CHANGES ALONG trunk

-----------------------------------------------------------------------
2012-02-20  13:50:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-394
Update TranSiesta tests. Cosmetics

*  Update the TranSiesta-TBTrans test directories
  
  TranSiesta-TBTrans specific tests now reside in
  Tests/TranSiesta-TBTrans. These tests (currently ts_fast and ts_au)
  only make sense if the "transiesta" flavor of Siesta has been compiled
  in (by executing "make transiesta" in a fresh build directory), so
  they are not executed by default.
  
  Reference outputs can now be found in
  Tests/Reference/TranSiesta-TBTrans.  Note that these reference
  outputs have not yet been updated: they correspond to siesta-3.1.
  
  The manual has been updated to refer to the Examples/TranSiesta
  directory (which has been created) for the guided calculation.
  
  removed:
    Tests/transiesta/Fast/
    Tests/transiesta/au_111_capacitor/
    Tests/transiesta/bulk_au_111/
    Tests/transiesta/elec_au_111_abc/
  added:
    Tests/Reference/TranSiesta-TBTrans/
    Tests/Reference/TranSiesta-TBTrans/ts_au/
    Tests/Reference/TranSiesta-TBTrans/ts_fast/
    Tests/TranSiesta-TBTrans/ts_au/
    Examples/TranSiesta
  renamed:
    Tests/transiesta/ => Tests/TranSiesta-TBTrans/
    Tests/ts_fast/ => Tests/TranSiesta-TBTrans/ts_fast/
  modified:
    Tests/TranSiesta-TBTrans/ts_fast/makefile
    Tests/TranSiesta-TBTrans/ts_fast/script.sh
    Tests/Makefile
    Tests/script_ts.mk
    Docs/siesta.tex

*  Removed call to BLAS routine zdotc in tbtrans. Replaced it
   by an explicit loop.

*  Clarify the mention of "hybrid" functionals in the manual
  
  modified:
    Docs/siesta.tex

*  Remove order-N test from standard list. Add note.

  As it does not run well in parallel, the order-N